--- a/style.css
+++ b/style.css
@@ -5,6 +5,11 @@ html{
 body{
     margin-left: 5%;
     margin-right: 5%;
+    font-size: 14px;
+}
+
+h4{
+    font-size: 17px; 
 }
 
 p, label, .darkred{
