--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ html{
     font-family: Arial, Helvetica, sans-serif;
 }
 
-body, footer {
+body {
     margin-left: 5%;
     margin-right: 5%;
     font-size: 14px;
@@ -99,7 +99,7 @@ container{
     display: flex; 
 }
 
-#form_last_row, footer{
+#form_last_row{
     display: flex;
     justify-content: center;
 }
@@ -114,6 +114,3 @@ container{
     color: darkgreen;
 }
 
-footer{
-    font-size: 10px !important;
-}
