Correction of Submit
Change the summit word to submit

--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ container{
     justify-content: center;
 }
 
-#summit{
+#submit{
     border-radius: 5px;
     padding-top: 5px;
     padding-bottom: 5px;
